Update ngrok endpoint URL to static URL in frontend fetch request

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             };
 
             try {
-                const response = await fetch('https://afde-2-207-45-12.ngrok-free.app/calculate-co2', {
+                const response = await fetch('https://concise-partly-colt.ngrok-free.app/calculate-co2', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
