--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container">
         <h1>Klimaschutzprojekt</h1>
+        <p>Hallo, Jenni!</p>
         
         <div class="form-group">
             <label for="transport">Transport (Kilometer mit Auto):</label>
