Update index.html with description and add flask_cors to requirements

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container">
         <h1>Klimaschutzprojekt</h1>
+        <p>Hier können Sie Ihren CO₂-Ausstoß berechnen und Verbesserungsvorschläge erhalten.</p>
         
         <div class="form-group">
             <label for="transport">Transport (Kilometer mit Auto):</label>
