--- a/index.html
+++ b/index.html
@@ -4,10 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Klimaschutzprojekt</title>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="static/style.css">
 </head>
 <body>
-    <h1>Klimaschutzprojekt</h1>
-    <p>More to come :P</p>
-    <p>WIP :3</p>
+    <div class="container">
+        <h1>Klimaschutzprojekt</h1>
+        <p>Hier können Sie Ihren CO₂-Ausstoß berechnen und Verbesserungsvorschläge erhalten.</p>
+        
+        <div class="form-group">
+            <label for="transport">Transport (Kilometer mit Auto):</label>
+            <input type="number" id="transport" name="transport" required>
+        </div>
+
+        <div class="form-group">
+            <label for="food">Ernährung (CO₂ von Ernährung):</label>
+            <input type="number" id="food" name="food" required>
+        </div>
+
+        <div class="form-group">
+            <label for="energy">Energie (Stromverbrauch):</label>
+            <input type="number" id="energy" name="energy" required>
+        </div>
+
+        <button onclick="calculateCO2()">CO₂ Berechnen</button>
+
+        <div id="result"></div>
+    </div>
+    <script src="static/script.js"></script>
 </body>
-</html>
