--- a/index.html
+++ b/index.html
@@ -12,19 +12,34 @@
         <h1>Klimaschutzprojekt</h1>
         <p>Hier können Sie Ihren CO₂-Ausstoß berechnen und Verbesserungsvorschläge erhalten.</p>
         
+        <h2>Transport</h2>
         <div class="form-group">
-            <label for="transport">Transport (Kilometer mit Auto):</label>
-            <input type="number" id="transport" name="transport" required>
+            <label for="car">Auto (Kilometer):</label>
+            <input type="number" id="car" name="car" min="0" required>
+        </div>
+        <div class="form-group">
+            <label for="bus">Bus/ÖPNV (Kilometer):</label>
+            <input type="number" id="bus" name="bus" min="0" required>
+        </div>
+        <div class="form-group">
+            <label for="bike">Fahrrad (Kilometer):</label>
+            <input type="number" id="bike" name="bike" min="0" required>
         </div>
 
+        <h2>Ernährung</h2>
         <div class="form-group">
-            <label for="food">Ernährung (CO₂ von Ernährung):</label>
-            <input type="number" id="food" name="food" required>
+            <label for="meat">Fleischkonsum (kg):</label>
+            <input type="number" id="meat" name="meat" min="0" required>
+        </div>
+        <div class="form-group">
+            <label for="veggie">Gemüsekonsum (kg):</label>
+            <input type="number" id="veggie" name="veggie" min="0" required>
         </div>
 
+        <h2>Energie</h2>
         <div class="form-group">
-            <label for="energy">Energie (Stromverbrauch):</label>
-            <input type="number" id="energy" name="energy" required>
+            <label for="energy">Stromverbrauch (kWh):</label>
+            <input type="number" id="energy" name="energy" min="0" required>
         </div>
 
         <button onclick="calculateCO2()">CO₂ Berechnen</button>
