Refactor data validation and improve form submission handling

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <input type="number" id="energy" name="energy" min="0" required>
         </div>
 
-        <button onclick="calculateCO2()">CO₂ Berechnen</button>
+        <button type="button" onclick="calculateCO2()">CO₂ Berechnen</button>
 
         <div id="result"></div>
     </div>
