--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     <link rel="stylesheet" href="static/style2.css">
 </head>
 <body>
+  <p>Live and Learn about Klimaschutz</p>  
     
+    <audio autoplay loop>
+        <source src="static/music/your-music-file.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
+
     </div>
     <script src="static/script2.js"></script>
 </body>
