Implement dynamic playlist and enhance audio player functionality

--- a/index.html
+++ b/index.html
@@ -8,13 +8,11 @@
     <link rel="stylesheet" href="static/style2.css">
 </head>
 <body>
-  <p>Live and Learn about Klimaschutz</p>  
-    
-    <audio autoplay loop>
-        <source src="static/music/your-music-file.mp3" type="audio/mpeg">
-        Your browser does not support the audio element.
-    </audio>
-
-    </div>
-    <script src="static/script2.js"></script>
+  <p>Live and Learn about Klimaschutz</p>
+  <audio id="audioPlayer">
+    <!-- Removed the source tag since we're setting it via JavaScript -->
+  </audio>
+  <button onclick="document.getElementById('audioPlayer').play()" class="music-button">© 2025-2025 Malik, Oli, Mika</button>
+  <button onclick="window.location.href='Calculator.html'" class="nav-button">Go to Another Page</button>
+  <script src="static/script2.js"></script>
 </body>
