Update copyright attribution in index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <audio id="audioPlayer">
     <!-- Removed the source tag since we're setting it via JavaScript -->
   </audio>
-  <button onclick="document.getElementById('audioPlayer').play()" class="music-button">© 2025-2025 Malik, Oli, Mika</button>
+  <button onclick="document.getElementById('audioPlayer').play()" class="music-button">© 2025-2025 Oliver, Malik, Mika</button>
   <button onclick="window.location.href='Calculator.html'" class="nav-button">Go to Another Page</button>
   <script src="static/script2.js"></script>
 </body>
