Update navigation button text for clarity

--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <!-- Removed the source tag since we're setting it via JavaScript -->
   </audio>
   <button onclick="document.getElementById('audioPlayer').play()" class="music-button">© 2025-2025 Oliver, Malik, Mika</button>
-  <button onclick="window.location.href='Calculator.html'" class="nav-button">Go to Another Page</button>
+  <button onclick="window.location.href='Calculator.html'" class="nav-button">Go to Calculator</button>
   <script src="static/script2.js"></script>
 </body>
