Update text to use 'Climate Change' instead of 'Klimaschutz'

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="static/style2.css">
 </head>
 <body>
-  <p>Live and Learn about Klimaschutz</p>
+  <p>Live and Learn about Climate Change</p>
   <audio id="audioPlayer">
   </audio>
   <button onclick="document.getElementById('audioPlayer').play()" class="music-button">© 2025-2025 Oliver, Malik, Mika</button>
