Update index.html with German introduction and improved layout for climate calculator

--- a/index.html
+++ b/index.html
@@ -8,10 +8,19 @@
     <link rel="stylesheet" href="static/style2.css">
 </head>
 <body>
-  <p>Live and Learn about Climate Change</p>
+  <div class="intro">
+    <h1>Willkommen beim Klimaschutzprojekt</h1>
+    <p>Entdecke, wie du deinen CO₂-Fußabdruck berechnen und verbessern kannst. Unser Rechner hilft dir dabei, deinen Einfluss auf die Umwelt zu verstehen und gibt dir praktische Tipps für einen klimafreundlicheren Lebensstil.</p>
+    <p>Mit unserem einfachen Calculator kannst du:</p>
+    <ul>
+      <li>Deine täglichen Aktivitäten analysieren</li>
+      <li>Deinen CO₂-Ausstoß berechnen</li>
+      <li>Personalisierte Verbesserungsvorschläge erhalten</li>
+    </ul>
+  </div>
   <audio id="audioPlayer">
   </audio>
   <button onclick="document.getElementById('audioPlayer').play()" class="music-button">© 2025-2025 Oliver, Malik, Mika</button>
-  <button onclick="window.location.href='Calculator.html'" class="nav-button">Go to Calculator</button>
+  <button onclick="window.location.href='Calculator.html'" class="nav-button">Zum CO₂-Rechner</button>
   <script src="static/script2.js"></script>
 </body>
