Update page title to English, emphasizing climate change learning

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="intro">
-    <h1>Willkommen beim Klimaschutzprojekt</h1>
+    <h1>Live and Learn about Climate Change</h1>
     <p>Entdecke, wie du deinen CO₂-Fußabdruck berechnen und verbessern kannst. Unser Rechner hilft dir dabei, deinen Einfluss auf die Umwelt zu verstehen und gibt dir praktische Tipps für einen klimafreundlicheren Lebensstil.</p>
     <p>Mit unserem einfachen Calculator kannst du:</p>
     <ul>
