--- a/index.html
+++ b/index.html
@@ -5,46 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Klimaschutzprojekt</title>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="static/style.css">
+    <link rel="stylesheet" href="static/style2.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Klimaschutzprojekt</h1>
-        <p>Hier können Sie Ihren CO₂-Ausstoß berechnen und Verbesserungsvorschläge erhalten.</p>
-        
-        <h2>Transport</h2>
-        <div class="form-group">
-            <label for="car">Auto (Kilometer):</label>
-            <input type="number" id="car" name="car" min="0" required>
-        </div>
-        <div class="form-group">
-            <label for="bus">Bus/ÖPNV (Kilometer):</label>
-            <input type="number" id="bus" name="bus" min="0" required>
-        </div>
-        <div class="form-group">
-            <label for="bike">Fahrrad (Kilometer):</label>
-            <input type="number" id="bike" name="bike" min="0" required>
-        </div>
-
-        <h2>Ernährung</h2>
-        <div class="form-group">
-            <label for="meat">Fleischkonsum (kg):</label>
-            <input type="number" id="meat" name="meat" min="0" required>
-        </div>
-        <div class="form-group">
-            <label for="veggie">Gemüsekonsum (kg):</label>
-            <input type="number" id="veggie" name="veggie" min="0" required>
-        </div>
-
-        <h2>Energie</h2>
-        <div class="form-group">
-            <label for="energy">Stromverbrauch (kWh):</label>
-            <input type="number" id="energy" name="energy" min="0" required>
-        </div>
-
-        <button type="button" onclick="calculateCO2()">CO₂ Berechnen</button>
-
-        <div id="result"></div>
-    </div>
-    <script src="static/script.js"></script>
+  <div class="intro">
+    <h1>Live and Learn about Climate Change</h1>
+    <p>Entdecke, wie du deinen CO₂-Fußabdruck berechnen und verbessern kannst. Unser Rechner hilft dir dabei, deinen Einfluss auf die Umwelt zu verstehen und gibt dir praktische Tipps für einen klimafreundlicheren Lebensstil.</p>
+    <p>Mit unserem einfachen Calculator kannst du:</p>
+    <ul>
+      <li>Deinen CO₂-Ausstoß berechnen</li>
+      <li>Deine täglichen Aktivitäten analysieren</li>
+      <li>Personalisierte Verbesserungsvorschläge erhalten</li>
+    </ul>
+  </div>
+  <audio id="audioPlayer">
+  </audio>
+  <button onclick="document.getElementById('audioPlayer').play()" class="music-button">© 2025-2025 Oliver, Malik, Mika</button>
+  <button onclick="window.location.href='Calculator.html'" class="nav-button">Zum CO₂-Rechner</button>
+  <script src="static/script2.js"></script>
 </body>
