--- a/Calculator.html
+++ b/Calculator.html
@@ -12,37 +12,53 @@
         <h1>Klimaschutzprojekt</h1>
         <p>Hier können Sie Ihren CO₂-Ausstoß berechnen und Verbesserungsvorschläge erhalten.</p>
         
-        <h2>Transport</h2>
-        <div class="form-group">
-            <label for="car">Auto (Kilometer):</label>
-            <input type="number" id="car" name="car" min="0" required>
-        </div>
-        <div class="form-group">
-            <label for="bus">Bus/ÖPNV (Kilometer):</label>
-            <input type="number" id="bus" name="bus" min="0" required>
-        </div>
-        <div class="form-group">
-            <label for="bike">Fahrrad (Kilometer):</label>
-            <input type="number" id="bike" name="bike" min="0" required>
+        <div class="progress-bar">
+            <div class="step active" data-step="1">Transport</div>
+            <div class="step" data-step="2">Ernährung</div>
+            <div class="step" data-step="3">Energie</div>
         </div>
 
-        <h2>Ernährung</h2>
-        <div class="form-group">
-            <label for="meat">Fleischkonsum (kg):</label>
-            <input type="number" id="meat" name="meat" min="0" required>
-        </div>
-        <div class="form-group">
-            <label for="veggie">Gemüsekonsum (kg):</label>
-            <input type="number" id="veggie" name="veggie" min="0" required>
+        <div class="section" id="section1" style="display: block;">
+            <h2>Transport</h2>
+            <div class="form-group">
+                <label for="car">Auto (Kilometer):</label>
+                <input type="number" id="car" name="car" min="0" required>
+            </div>
+            <div class="form-group">
+                <label for="bus">Bus/ÖPNV (Kilometer):</label>
+                <input type="number" id="bus" name="bus" min="0" required>
+            </div>
+            <div class="form-group">
+                <label for="bike">Fahrrad (Kilometer):</label>
+                <input type="number" id="bike" name="bike" min="0" required>
+            </div>
+            <button onclick="window.location.href='index.html'" class="nav-button">Zurück zur Startseite</button>
+            <button type="button" onclick="nextSection(2)">Weiter</button>
         </div>
 
-        <h2>Energie</h2>
-        <div class="form-group">
-            <label for="energy">Stromverbrauch (kWh):</label>
-            <input type="number" id="energy" name="energy" min="0" required>
+        <div class="section" id="section2" style="display: none;">
+            <h2>Ernährung</h2>
+            <div class="form-group">
+                <label for="meat">Fleischkonsum (kg):</label>
+                <input type="number" id="meat" name="meat" min="0" required>
+            </div>
+            <div class="form-group">
+                <label for="veggie">Gemüsekonsum (kg):</label>
+                <input type="number" id="veggie" name="veggie" min="0" required>
+            </div>
+            <button type="button" onclick="previousSection(1)">Zurück</button>
+            <button type="button" onclick="nextSection(3)">Weiter</button>
         </div>
 
-        <button type="button" onclick="calculateCO2()">CO₂ Berechnen</button>
+        <div class="section" id="section3" style="display: none;">
+            <h2>Energie</h2>
+            <div class="form-group">
+                <label for="energy">Stromverbrauch (kWh):</label>
+                <input type="number" id="energy" name="energy" min="0" required>
+            </div>
+            <button type="button" onclick="previousSection(2)">Zurück</button>
+            <button type="button" onclick="calculateCO2()">CO₂ Berechnen</button>
+        </div>
 
         <div id="result"></div>
     </div>
