Update intro text and add user-select prevention
- Modify index.html to clarify CO₂ calculator description
- Add CSS user-select prevention to prevent text highlighting

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="intro">
     <h1>Live and Learn about Climate Change</h1>
     <p>Entdecke, wie du deinen CO₂-Fußabdruck berechnen und verbessern kannst. Unser Rechner hilft dir dabei, deinen Einfluss auf die Umwelt zu verstehen und gibt dir praktische Tipps für einen klimafreundlicheren Lebensstil.</p>
-    <p>Mit unserem einfachen Calculator kannst du:</p>
+    <p>Mit unserem einfachen CO₂-Rechner kannst du:</p>
     <ul>
       <li>Deinen CO₂-Ausstoß berechnen</li>
       <li>Deine täglichen Aktivitäten analysieren</li>
