Add section transition animations and improve UI responsiveness
- Implement smooth sliding animations for section transitions
- Add active state classes for sections and progress bar
- Enhance button and result display with subtle animations
- Improve overall user interaction with CSS transitions

--- a/Calculator.html
+++ b/Calculator.html
@@ -18,7 +18,7 @@
             <div class="step" data-step="3">Energie</div>
         </div>
 
-        <div class="section" id="section1" style="display: block;">
+        <div class="section active" id="section1" style="display: block;">
             <h2>Transport</h2>
             <div class="form-group">
                 <label for="car">Auto (Kilometer):</label>
