Add interactive music button with play/pause functionality

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </div>
   <audio id="audioPlayer">
   </audio>
-  <button onclick="document.getElementById('audioPlayer').play()" class="music-button">© 2025-2025 Oliver, Malik, Mika</button>
-  <button onclick="window.location.href='Calculator.html'" class="nav-button">Zum CO₂-Rechner</button>
+  <button class="music-button">▶ © 2025-2025 Oliver, Malik, Mika</button>
+  <button class="nav-button">Zum CO₂-Rechner</button>
   <script src="static/script2.js"></script>
 </body>
