--- a/Calculator.html
+++ b/Calculator.html
@@ -6,6 +6,7 @@
     <title>Klimaschutzprojekt</title>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="static/style.css">
+    <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
 </head>
 <body>
     <div class="container">
