--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Klimaschutzprojekt</title>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="static/style2.css">
+    <link rel="icon" type="image/x-icon" href="static/favicon.ico">
 </head>
 <body>
   <div class="intro">
@@ -20,7 +21,7 @@
   </div>
   <audio id="audioPlayer">
   </audio>
-  <button onclick="document.getElementById('audioPlayer').play()" class="music-button">© 2025-2025 Oliver, Malik, Mika</button>
-  <button onclick="window.location.href='Calculator.html'" class="nav-button">Zum CO₂-Rechner</button>
+  <button class="music-button">▶ © 2025-2025 Oliver, Malik, Mika</button>
+  <button class="nav-button">Zum CO₂-Rechner</button>
   <script src="static/script2.js"></script>
 </body>
