--- a/result.html
+++ b/result.html
@@ -66,6 +66,24 @@
             margin: 0 auto;
             padding: 20px;
         }
+
+        body::before {
+            content: '';
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100vh;
+            background: linear-gradient(to right, #4CAF50, #FFEB3B);
+            opacity: 0;
+            transition: all 4s ease;
+            z-index: -1;
+        }
+
+        body.high-co2::before {
+            opacity: 1;
+            background: linear-gradient(to right, #aca8a8, #1a1a1a);
+        }
     </style>
 </head>
 <body>
@@ -82,6 +100,11 @@
                             Dein CO₂-Ausstoß ist: ${co2Result} kg
                         </div>
                     `);
+                    
+                    // Füge die Klasse zum Body hinzu, wenn CO2 über 1000kg
+                    if (co2Value > 1000) {
+                        document.body.classList.add('high-co2');
+                    }
                 } else {
                     document.write(`
                         <div class="result-text normal">
