--- a/Calculator.html
+++ b/Calculator.html
@@ -6,8 +6,48 @@
     <title>Klimaschutzprojekt</title>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="static/style.css">
+    <style>
+        .page-transition {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: #4CAF50;
+            z-index: 9999;
+            animation: fadeOut 1s ease-out forwards;
+        }
+
+        @keyframes fadeOut {
+            from {
+                opacity: 1;
+            }
+            to {
+                opacity: 0;
+                visibility: hidden;
+            }
+        }
+
+        .container {
+            opacity: 0;
+            transform: translateY(20px);
+            animation: slideUp 0.8s ease-out 0.5s forwards;
+        }
+
+        @keyframes slideUp {
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+    </style>
 </head>
 <body>
+    <div class="page-transition"></div>
     <div class="container">
         <h1>Klimaschutzprojekt</h1>
         <p>Hier können Sie Ihren CO₂-Ausstoß berechnen und Verbesserungsvorschläge erhalten.</p>
@@ -57,8 +97,20 @@
                 <input type="number" id="energy" name="energy" min="0" required>
             </div>
             <button type="button" onclick="previousSection(2)">Zurück</button>
-            <button type="button" onclick="calculateCO2()">CO₂ Berechnen</button>
+            <button type="button" onclick="calculateCO2().then(() => startTransition('result.html'))">CO₂ Berechnen</button>
         </div>
     </div>
     <script src="static/script.js"></script>
+    <script>
+        function startTransition(url) {
+            const transition = document.createElement('div');
+            transition.className = 'page-transition';
+            transition.style.animation = 'fadeIn 1s ease-out';
+            document.body.appendChild(transition);
+            
+            setTimeout(() => {
+                window.location.href = url;
+            }, 900);
+        }
+    </script>
 </body>
