--- a/result.html
+++ b/result.html
@@ -84,9 +84,50 @@
             opacity: 1;
             background: linear-gradient(to right, #aca8a8, #1a1a1a);
         }
+
+        /* Seitenübergang Animation */
+        .page-transition {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: #4CAF50;
+            z-index: 9999;
+            animation: fadeOut 1s ease-out forwards;
+        }
+
+        @keyframes fadeOut {
+            from {
+                opacity: 1;
+            }
+            to {
+                opacity: 0;
+                visibility: hidden;
+            }
+        }
+
+        /* Container Animation */
+        .container {
+            opacity: 0;
+            transform: translateY(20px);
+            animation: slideUp 0.8s ease-out 0.5s forwards;
+        }
+
+        @keyframes slideUp {
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
     </style>
 </head>
 <body>
+    <div class="page-transition"></div>
     <div class="container">
         <div class="result-container">
             <script>
@@ -115,8 +156,21 @@
             </script>
         </div>
         <div style="text-align: center;">
-            <button onclick="window.location.href='Calculator.html'" class="button">Zurück zum Rechner</button>
+            <button onclick="startTransition('Calculator.html')" class="button">Zurück zum Rechner</button>
         </div>
     </div>
+
+    <script>
+        function startTransition(url) {
+            const transition = document.createElement('div');
+            transition.className = 'page-transition';
+            transition.style.animation = 'fadeIn 1s ease-out';
+            document.body.appendChild(transition);
+            
+            setTimeout(() => {
+                window.location.href = url;
+            }, 900);
+        }
+    </script>
 </body>
 </html> 
