--- a/Calculator.html
+++ b/Calculator.html
@@ -13,7 +13,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: #4CAF50;
+            background-color: linear-gradient(to right, #06ff1b, #d6c803);
             z-index: 9999;
             animation: fadeOut 1s ease-out forwards;
         }
