--- a/result.html
+++ b/result.html
@@ -74,7 +74,7 @@
             left: 0;
             width: 100%;
             height: 100vh;
-            background: linear-gradient(to right, #4CAF50, #FFEB3B);
+            background: linear-gradient(to right, #06ff1b, #d6c803);
             opacity: 0;
             transition: all 4s ease;
             z-index: -1;
@@ -92,7 +92,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: #4CAF50;
+            background-color: #06ff1b;
             z-index: 9999;
             animation: fadeOut 1s ease-out forwards;
         }
