--- a/result.html
+++ b/result.html
@@ -32,7 +32,7 @@
         }
 
         .button {
-            background-color: #4CAF50;
+            background-color: #000000;
             color: white;
             padding: 10px 20px;
             border: none;
