--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <title>Klimaschutzprojekt</title>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="static/style2.css">
+    <link rel="icon" type="image/x-icon" href="static/favicon.ico">
 </head>
 <body>
   <div class="intro">
     <h1>Live and Learn about Climate Change</h1>
     <p>Entdecke, wie du deinen CO₂-Fußabdruck berechnen und verbessern kannst. Unser Rechner hilft dir dabei, deinen Einfluss auf die Umwelt zu verstehen und gibt dir praktische Tipps für einen klimafreundlicheren Lebensstil.</p>
-    <p>Mit unserem einfachen CO₂-Rechner kannst du:</p>
+    <p>Mit unserem einfachen Calculator kannst du:</p>
     <ul>
       <li>Deinen CO₂-Ausstoß berechnen</li>
       <li>Deine täglichen Aktivitäten analysieren</li>
@@ -20,7 +21,7 @@
   </div>
   <audio id="audioPlayer">
   </audio>
-  <button onclick="document.getElementById('audioPlayer').play()" class="music-button">© 2025-2025 Oliver, Malik, Mika</button>
-  <button onclick="window.location.href='Calculator.html'" class="nav-button">Zum CO₂-Rechner</button>
+  <button class="music-button">▶ © 2025-2025 Oliver, Malik, Mika</button>
+  <button class="nav-button">Zum CO₂-Rechner</button>
   <script src="static/script2.js"></script>
 </body>
