--- a/Calculator.html
+++ b/Calculator.html
@@ -7,45 +7,112 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="static/style.css">
     <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
+    <style>
+        .page-transition {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: #06ff1b;
+            z-index: 9999;
+            animation: fadeOut 1s ease-out forwards;
+        }
+
+        @keyframes fadeOut {
+            from {
+                opacity: 1;
+            }
+            to {
+                opacity: 0;
+                visibility: hidden;
+            }
+        }
+
+        .container {
+            opacity: 0;
+            transform: translateY(20px);
+            animation: slideUp 0.8s ease-out 0.5s forwards;
+        }
+
+        @keyframes slideUp {
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+    </style>
+    <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
 </head>
 <body>
+    <div class="page-transition"></div>
     <div class="container">
         <h1>Klimaschutzprojekt</h1>
         <p>Hier können Sie Ihren CO₂-Ausstoß berechnen und Verbesserungsvorschläge erhalten.</p>
         
-        <h2>Transport</h2>
-        <div class="form-group">
-            <label for="car">Auto (Kilometer):</label>
-            <input type="number" id="car" name="car" min="0" required>
-        </div>
-        <div class="form-group">
-            <label for="bus">Bus/ÖPNV (Kilometer):</label>
-            <input type="number" id="bus" name="bus" min="0" required>
-        </div>
-        <div class="form-group">
-            <label for="bike">Fahrrad (Kilometer):</label>
-            <input type="number" id="bike" name="bike" min="0" required>
+        <div class="progress-bar">
+            <div class="step active" data-step="1">Transport</div>
+            <div class="step" data-step="2">Ernährung</div>
+            <div class="step" data-step="3">Energie</div>
         </div>
 
-        <h2>Ernährung</h2>
-        <div class="form-group">
-            <label for="meat">Fleischkonsum (kg):</label>
-            <input type="number" id="meat" name="meat" min="0" required>
-        </div>
-        <div class="form-group">
-            <label for="veggie">Gemüsekonsum (kg):</label>
-            <input type="number" id="veggie" name="veggie" min="0" required>
+        <div class="section active" id="section1" style="display: block;">
+            <h2>Transport</h2>
+            <div class="form-group">
+                <label for="car">Auto (Kilometer):</label>
+                <input type="number" id="car" name="car" min="0" required>
+            </div>
+            <div class="form-group">
+                <label for="bus">Bus/ÖPNV (Kilometer):</label>
+                <input type="number" id="bus" name="bus" min="0" required>
+            </div>
+            <div class="form-group">
+                <label for="bike">Fahrrad (Kilometer):</label>
+                <input type="number" id="bike" name="bike" min="0" required>
+            </div>
+            <button onclick="window.location.href='index.html'" class="nav-button">Zurück zur Startseite</button>
+            <button type="button" onclick="nextSection(2)">Weiter</button>
         </div>
 
-        <h2>Energie</h2>
-        <div class="form-group">
-            <label for="energy">Stromverbrauch (kWh):</label>
-            <input type="number" id="energy" name="energy" min="0" required>
+        <div class="section" id="section2" style="display: none;">
+            <h2>Ernährung</h2>
+            <div class="form-group">
+                <label for="meat">Fleischkonsum (kg):</label>
+                <input type="number" id="meat" name="meat" min="0" required>
+            </div>
+            <div class="form-group">
+                <label for="veggie">Gemüsekonsum (kg):</label>
+                <input type="number" id="veggie" name="veggie" min="0" required>
+            </div>
+            <button type="button" onclick="previousSection(1)">Zurück</button>
+            <button type="button" onclick="nextSection(3)">Weiter</button>
         </div>
 
-        <button type="button" onclick="calculateCO2()">CO₂ Berechnen</button>
-
-        <div id="result"></div>
+        <div class="section" id="section3" style="display: none;">
+            <h2>Energie</h2>
+            <div class="form-group">
+                <label for="energy">Stromverbrauch (kWh):</label>
+                <input type="number" id="energy" name="energy" min="0" required>
+            </div>
+            <button type="button" onclick="previousSection(2)">Zurück</button>
+            <button type="button" onclick="calculateCO2().then(() => startTransition('result.html'))">CO₂ Berechnen</button>
+        </div>
     </div>
     <script src="static/script.js"></script>
+    <script>
+        function startTransition(url) {
+            const transition = document.createElement('div');
+            transition.className = 'page-transition';
+            transition.style.animation = 'fadeIn 1s ease-out';
+            document.body.appendChild(transition);
+            
+            setTimeout(() => {
+                window.location.href = url;
+            }, 900);
+        }
+    </script>
 </body>
