made the button on click start the transition

--- a/Calculator.html
+++ b/Calculator.html
@@ -74,7 +74,7 @@
                 <label for="bike">Fahrrad (Kilometer):</label>
                 <input type="number" id="bike" name="bike" min="0" required>
             </div>
-            <button onclick="window.location.href='index.html'" class="nav-button">Zurück zur Startseite</button>
+            <button onclick="startTransition('index.html')" class="nav-button">Zurück zur Startseite</button>
             <button type="button" onclick="nextSection(2)">Weiter</button>
         </div>
 
