--- a/index.html
+++ b/index.html
@@ -7,6 +7,43 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="static/style2.css">
     <link rel="icon" type="image/x-icon" href="static/favicon.ico">
+    <style>
+        .history-button {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            padding: 10px 20px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+
+        .modal {
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            z-index: 1000;
+        }
+
+        .modal-overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: rgba(0,0,0,0.5);
+            z-index: 999;
+        }
+    </style>
 </head>
 <body>
   <div class="intro">
@@ -23,16 +60,49 @@
   </audio>
   <button class="music-button">▶ © 2025-2025 Oliver, Malik, Mika</button>
   <button class="nav-button">Zum CO₂-Rechner</button>
-  <div class="login-container">
-    <button id="loginBtn" class="login-button">Login</button>
-    <div id="loginModal" class="modal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <h2>Login mit CO₂-Key</h2>
-            <input type="text" id="keyInput" placeholder="Geben Sie Ihren CO₂-Key ein">
-            <button onclick="validateKey()">Bestätigen</button>
-        </div>
-    </div>
+  <button class="history-button" onclick="showHistoryModal()">View History</button>
+  <div class="modal-overlay" id="historyOverlay"></div>
+  <div class="modal" id="historyModal">
+    <h2>Enter History Key</h2>
+    <input type="text" id="historyKey" placeholder="Enter your history key">
+    <button onclick="fetchHistory()">View</button>
+    <button onclick="closeHistoryModal()">Close</button>
   </div>
   <script src="static/script2.js"></script>
+  <script>
+    function showHistoryModal() {
+      document.getElementById('historyModal').style.display = 'block';
+      document.getElementById('historyOverlay').style.display = 'block';
+    }
+
+    function closeHistoryModal() {
+      document.getElementById('historyModal').style.display = 'none';
+      document.getElementById('historyOverlay').style.display = 'none';
+    }
+
+    async function fetchHistory() {
+      const key = document.getElementById('historyKey').value;
+      try {
+        const response = await fetch(`https://your-api-url/history/${key}`);
+        const data = await response.json();
+        
+        if (response.ok) {
+          // Redirect to result page with history data
+          const params = new URLSearchParams({
+            co2: data.total_co2,
+            car: data.car_km,
+            bus: data.bus_km,
+            energy: data.energy_kwh,
+            meat: data.meat_kg,
+            veggie: data.veggie_kg
+          });
+          window.location.href = `result.html?${params.toString()}`;
+        } else {
+          alert('Invalid history key');
+        }
+      } catch (error) {
+        alert('Error fetching history');
+      }
+    }
+  </script>
 </body>
