--- a/result.html
+++ b/result.html
@@ -6,6 +6,7 @@
     <title>CO₂-Ergebnis</title>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="static/style.css">
+    <link rel="icon" type="image/x-icon" href="static/favicon.ico">
     <style>
         .result-container {
             background-color: #ffffff;
